# axum-graphql

./: Cargo.toml  README.md
src/: main.rs
src/model/: mod.rs
src/observability/: metrics.rs  mod.rs  tracing.rs
src/routes/: mod.rs
